tests/negative/test_expr_dot_base_not_data.orb
fnc main() () {
    let x:i32;
    . x a;
};